[project]
name = "movie-recs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.2",
    "implicit>=0.7.2",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "ruff>=0.13.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "torch>=2.2",
    "tqdm>=4.67.1",
    "transformers>=4.44",
    "uvicorn[standard]>=0.36.0",
]
